:memo: Redundant documentations are removed and existing ones are updated to fit the new test classifications.